k8s/service.yml

apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: default
spec:
  selector:
    app: laravel-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
